dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.13)
AC_INIT(gprof.c)

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE(gprof, 2.9-ee-991111)

AM_PROG_LIBTOOL

dnl For simplicity, we use the BFD configuration file for most
dnl things.  However, we also need our own configuration file for
dnl the automake PACKAGE and VERSION macros.  We don't name it
dnl config.h, to avoid any possible confusion with the bfd config.h.
AM_CONFIG_HEADER(gconfig.h:gconfig.in)

AC_PROG_CC
AC_PROG_INSTALL

AC_ISC_POSIX

ALL_LINGUAS=
CY_GNU_GETTEXT

dnl We need to set BSD44_FORMAT on a host which uses the additional
dnl header fields.  This is an attempt to do that.  I can't think of a
dnl good feature test for this.
case "${target}" in
*-*-bsd4.4* | *-*-netbsd* | *-*-freebsd* | *-*-openbsd* \
| *-*-cygwin* | *-*-mingw32 | *-*-win32 )
  AC_DEFINE(BSD44_FORMAT, 1, [System uses BSD 4.4 gmon.out format?])
  ;;
esac

AM_MAINTAINER_MODE
AC_EXEEXT

AC_OUTPUT(Makefile po/Makefile.in:po/Make-in,
[sed -e '/POTFILES =/r po/POTFILES' po/Makefile.in > po/Makefile])
